fix: nav width on mobile

--- a/elements/pfe-navigation/src/pfe-navigation.scss
+++ b/elements/pfe-navigation/src/pfe-navigation.scss
@@ -79,9 +79,17 @@ pfe-icon {
 // Note: These styles do not pick up in Edge
 ::slotted([slot="logo"]) {
   margin: 0 !important;
+  max-width: 100%;
   max-height: #{pfe-local(MaxHeight)};
   min-width:  #{pfe-local($region: logo, $cssvar: MinWidth)};
   display: block;
+  border: yellow solid 1px;
+}
+
+@media (max-width: 440px) {
+    [slot="logo"] {
+      min-width: 150px;
+  }
 }
 
 ::slotted([slot="mobile-login"]),
@@ -123,6 +131,7 @@ pfe-icon {
     flex-flow: row nowrap;
     align-items: stretch;
     justify-content: flex-start;
+    box-sizing: border-box;
 
     // stop using padding, start using max width at medium breakpoint
     @media screen and (min-width: pfe-breakpoint(md)) {
@@ -156,14 +165,19 @@ pfe-icon {
     flex-shrink: 0; // Prevent flexbox from collapsing the padding.
     align-items: flex-start;
     justify-content: center;
-    min-width: #{pfe-local($region: logo, $cssvar: MinWidth)};
+    width: #{pfe-local($region: logo, $cssvar: MinWidth)};
+    flex: 0 0 var(--pfe-navigation__logo--MinWidth);
     
     padding-top: #{pfe-local(Padding--vertical)};
     padding-bottom: #{pfe-local(Padding--vertical)};
-    padding-right: 48px; // ensure gap between main menu links and logo
+    padding-right: 20px; // ensure gap between main menu links and logo
+    border: pink solid 1px;
 
-    @media screen and (min-width: pfe-breakpoint("lg-mobile", $map: false)) {
-        padding-right: 20px;
+    //@media screen and (max-width: pfe-breakpoint("lg-mobile", $map: false)) {
+    //  padding-right: 20px;
+    //}
+    @media screen and (min-width: pfe-breakpoint("grid-breakpoint--md")) {
+        padding-right: 48px;
     }
 
     @media screen and (max-height: 500px) {
